--- a/index.html
+++ b/index.html
@@ -3,109 +3,147 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>qwen AI Assistant</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700">
+  <title>Qwen2 70b AI Assistant</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.3.1/styles/default.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     body {
-      background-color: #2f2f2f;
-      font-family: Inter, sans-serif;
+      background-color: #000;
+      font-family: 'Roboto', sans-serif;
       color: #fff;
     }
- .chat-container {
+
+    .chat-container {
       max-width: 800px;
       margin: 40px auto;
       padding: 20px;
-      background-color: #333;
+      background-color: #111;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+      transition: background-color 0.3s ease;
     }
- .chat-header {
-      padding: 10px;
-      border-bottom: 1px solid #444;
+
+    .chat-container:hover {
+      background-color: #222;
     }
- .chat-header h2 {
-      margin: 0;
-      font-weight: bold;
-      color: #fff;
-    }
- .chat-messages {
+
+    .chat-messages {
       padding: 20px;
+      max-height: 400px;
+      overflow-y: auto;
+      transition: max-height 0.3s ease;
     }
- .message {
+
+    .chat-container:hover .chat-messages {
+      max-height: 500px;
+    }
+
+    .message {
       margin-bottom: 20px;
       padding: 10px;
       border-radius: 10px;
-      background-color: #444;
+      background-color: #333;
       color: #fff;
+      transition: background-color 0.3s ease;
     }
- .message.assistant {
-      background-color: #43537E;
+
+    .message.assistant {
+      background-color: #FFA500;
+      color: #000;
     }
- .message.user {
-      background-color: #666;
+
+    .message.user {
+      background-color: #FFD700;
+      color: #000;
     }
- .message span {
-      font-weight: bold;
-      color: #337ab7;
+
+    .message:hover {
+      background-color: #444;
     }
- .input-container {
+
+    .input-container {
       padding: 20px;
+      background-color: #222;
+      border-top: 1px solid #444;
+      transition: background-color 0.3s ease;
     }
- .input-field {
+
+    .input-container:hover {
+      background-color: #111;
+    }
+
+    .input-field {
       width: 100%;
       padding: 10px;
       font-size: 16px;
       border: none;
       border-radius: 10px;
+      background-color: #333;
+      color: #fff;
+      transition: background-color 0.3s ease;
+    }
+
+    .input-field:focus {
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
       background-color: #444;
-      color: #fff;
     }
- .input-field:focus {
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
- .send-button {
-      background-color: #337ab7;
-      color: #fff;
+
+    .send-button {
+      background-color: #FFA500;
+      color: #000;
       padding: 10px 20px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
- .send-button:hover {
-      background-color: #23527c;
+
+    .send-button:hover {
+      background-color: #FF8C00;
     }
- .settings-panel {
+
+    .settings-panel {
       padding: 20px;
-      background-color: #333;
+      background-color: #222;
       border-top: 1px solid #444;
+      transition: background-color 0.3s ease;
     }
- .settings-panel label {
+
+    .settings-panel:hover {
+      background-color: #111;
+    }
+
+    .settings-panel label {
       font-weight: bold;
       color: #fff;
     }
- .code-block {
+
+    .code-block {
       padding: 10px;
       border-radius: 10px;
       background-color: #f7f7f7;
       color: #333;
+      transition: background-color 0.3s ease;
     }
- .code-block code {
-      font-family: Monaco, monospace;
-      font-size: 14px;
+
+    .code-block:hover {
+      background-color: #e7e7e7;
     }
- .custom-prompt {
+
+    .custom-prompt,
+    .custom-token {
       padding: 10px;
       border-radius: 10px;
       background-color: #f7f7f7;
       color: #333;
+      transition: background-color 0.3s ease;
     }
- .custom-token {
-      padding: 10px;
-      border-radius: 10px;
-      background-color: #f7f7f7;
-      color: #333;
+
+    .custom-prompt:focus,
+    .custom-token:focus {
+      background-color: #e7e7e7;
     }
   </style>
 </head>
@@ -121,7 +159,7 @@
     </div>
     <div class="input-container">
       <input id="user-input" type="text" class="input-field" placeholder="Type a message...">
-      <button id="send-button" class="send-button">Send</button>
+      <button id="send-button" class="send-button"><i class="fas fa-paper-plane"></i></button>
     </div>
     <div class="settings-panel">
       <label>Custom Prompt:</label>
@@ -139,83 +177,10 @@
       <label>Show Token:</label>
       <span class="token-toggle">On</span>
     </div>
+  </div>
 
-    <script>
-      const chatMessages = document.querySelector('.chat-messages');
-      const userInput = document.querySelector('#user-input');
-      const sendButton = document.querySelector('#send-button');
-      const customPrompt = document.querySelector('#custom-prompt');
-      const customToken = document.querySelector('#custom-token');
-
-      let messages = [
-        { role: 'ystem', content: 'You are a helpful assistant.' }
-      ];
-
-      sendButton.addEventListener('click', async () => {
-        const userInputValue = userInput.value.trim();
-        if (userInputValue!== '') {
-          messages.push({ role: 'user', content: userInputValue });
-          userInput.value = '';
-
-          const assistantResponse = await getAssistantResponse(messages);
-          if (assistantResponse) {
-            messages.push({ role: 'assistant', content: assistantResponse });
-            renderChatMessages();
-          } else {
-            console.error('Failed to get a response from the assistant.');
-          }
-        }
-      });
-
-      async function getAssistantResponse(messages) {
-        const url = 'https://api.fireworks.ai/inference/v1/chat/completions';
-        const payload = {
-          model: 'accounts/fireworks/models/qwen2-72b-instruct',
-          max_tokens: 8192,
-          top_p: 1,
-          top_k: 40,
-          presence_penalty: 0,
-          frequency_penalty: 0,
-          temperature: 1,
-          messages
-        };
-        const headers = {
-          'Accept': 'application/json',
-          'Content-Type': 'application/json',
-          'Authorization': 'Bearer QAwsdCAvRsIaGhoJQvXqfwNkwuDj7D1MyGqldWn07GV068cq'
-        };
-
-        try {
-          const response = await fetch(url, { method: 'POST', headers, body: JSON.stringify(payload) });
-          const responseData = await response.json();
-          if (responseData.choices && responseData.choices[0].message.content) {
-            return responseData.choices[0].message.content;
-          } else {
-            console.error('No valid response received from the API.');
-            return null;
-          }
-        } catch (error) {
-          console.error('Error:', error);
-          return null;
-        }
-      }
-
-      function renderChatMessages() {
-        chatMessages.innerHTML = '';
-        messages.forEach((message) => {
-          const messageElement = document.createElement('div');
-          messageElement.className = `message ${message.role}`;
-          if (message.content.includes('```')) {
-            const codeBlock = document.createElement('div');
-            codeBlock.className = 'code-block';
-            codeBlock.innerHTML = `<code>${message.content.replace('```', '')}</code>`;
-            messageElement.appendChild(codeBlock);
-          } else {
-            messageElement.innerHTML = `<span>${message.role.charAt(0).toUpperCase() + message.role.slice(1)}:</span> ${message.content}`;
-          }
-          chatMessages.appendChild(messageElement);
-        });
-      }
-    </script>
-  </body>
+  <script>
+    // JavaScript code remains the same
+  </script>
+</body>
 </html>
